View Issue Details

IDProjectCategoryView StatusLast Update
0032464Open CASCADEOCCT:DRAWpublic2021-08-28 16:00
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityintegration request 
Status closedResolutionfixed 
Target Version7.6.0Fixed in Version7.6.0 
Summary0032464: Draw Harness, ViewerTest - rely on AIS_ViewController within vanimation command
DescriptionExisting vanimation implementation relies on Tcl vwait for handling user input between animation frames.
It is desired redirecting vanimation to AIS_ViewController.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot required

Relationships

related to 0032303 closedbugmaster Draw Harness - fix compilation issues when using Emscripten SDK 
related to 0032249 closedbugmaster Draw Harness, ViewerTest - broken description of vanim command 

Activities

git

2021-06-27 20:14

administrator   ~0102105

Branch CR32464 has been created by kgv.

SHA-1: a184fbcf42b905ae6a24b3eb453c0959b7fcb56a


Detailed log of new commits:

Author: kgv
Date: Sun Jun 27 20:13:49 2021 +0300

    0032464: Draw Harness, ViewerTest - rely on AIS_ViewController within vanimation command
    
    Added AIS_ViewController::ObjectsAnimation() property
    similar to AIS_ViewController::ViewAnimation() but designed for objects animation.

git

2021-06-27 20:25

administrator   ~0102106

Branch CR32464 has been updated forcibly by kgv.

SHA-1: 538e0fc71b17aa7c139a8c6115243f3e8deb51e2

git

2021-06-28 23:00

administrator   ~0102141

Branch CR32464 has been updated forcibly by kgv.

SHA-1: 03a226eb60d21b29a3adcfc9f05c46bc5108ce21

git

2021-08-26 20:09

administrator   ~0103443

Branch CR32464 has been updated forcibly by kgv.

SHA-1: e474d2fbefbbcdd08f05cfcadda6c710b9273cbd

git

2021-08-26 22:56

administrator   ~0103445

Branch CR32464 has been updated forcibly by kgv.

SHA-1: bb36bf2c6c85ada674dff2c766562baf514100af

kgv

2021-08-27 09:07

developer   ~0103446

Please raise the patch
- OCCT: branch CR32464.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32464-master-KGV/

bugmaster

2021-08-28 15:43

administrator   ~0103473

Combination -
OCCT branch : IR-2021-08-27
master SHA - 8f70959571ab8999b47f88d673343587e733f364
a87b7ddc8cb44606b91e3f37113847c3f5f50fdc
Products branch : IR-2021-08-27 SHA - 71e8b69563894a6e7348c9bd5b0294a5e5e8fe3f
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17432.060000000307 / 17364.750000000335 [+0.39%]
Products
Total CPU difference: 11534.270000000102 / 11550.27000000011 [-0.14%]
Windows-64-VC14:
OCCT
Total CPU difference: 19189.15625 / 19243.171875 [-0.28%]
Products
Total CPU difference: 12874.53125 / 12885.734375 [-0.09%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-08-28 16:00

administrator   ~0103487

Branch CR32464 has been deleted by mnt.

SHA-1: bb36bf2c6c85ada674dff2c766562baf514100af

Related Changesets

occt: master 8f709595

2021-06-27 17:13:49

kgv


Committer: bugmaster Details Diff
0032464: Draw Harness, ViewerTest - rely on AIS_ViewController within vanimation command

Added AIS_ViewController::ObjectsAnimation() property
similar to AIS_ViewController::ViewAnimation() but designed for objects animation.
Affected Issues
0032464
mod - src/AIS/AIS_Animation.hxx Diff File
mod - src/AIS/AIS_ViewController.cxx Diff File
mod - src/AIS/AIS_ViewController.hxx Diff File
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2021-06-27 20:12 kgv New Issue
2021-06-27 20:12 kgv Assigned To => kgv
2021-06-27 20:14 git Note Added: 0102105
2021-06-27 20:25 git Note Added: 0102106
2021-06-27 20:26 kgv Relationship added related to 0032249
2021-06-28 23:00 git Note Added: 0102141
2021-08-26 20:09 git Note Added: 0103443
2021-08-26 22:56 git Note Added: 0103445
2021-08-27 09:07 kgv Note Added: 0103446
2021-08-27 09:07 kgv Assigned To kgv => bugmaster
2021-08-27 09:07 kgv Status new => resolved
2021-08-27 09:07 kgv Status resolved => reviewed
2021-08-27 09:09 kgv Relationship added related to 0032303
2021-08-28 15:43 bugmaster Note Added: 0103473
2021-08-28 15:43 bugmaster Status reviewed => tested
2021-08-28 15:46 bugmaster Test case number => Not required
2021-08-28 15:51 bugmaster Changeset attached => occt master 8f709595
2021-08-28 15:51 bugmaster Status tested => verified
2021-08-28 15:51 bugmaster Resolution open => fixed
2021-08-28 16:00 git Note Added: 0103487