0032464: Draw Harness, ViewerTest - rely on AIS_ViewController within vanimation command

Added AIS_ViewController::ObjectsAnimation() property
similar to AIS_ViewController::ViewAnimation() but designed for objects animation.